@@ -8,7 +8,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclStubInit.c,v 1.84.2.56 2009/06/24 12:47:20 dgp Exp $
+ * RCS: @(#) $Id: tclStubInit.c,v 1.84.2.57 2009/06/30 06:36:25 dgp Exp $
  */
 
 #include "tclInt.h"
@@ -33,6 +33,7 @@
 #undef Tcl_ValidateAllMemory
 #undef Tcl_FindHashEntry
 #undef Tcl_CreateHashEntry
+#undef Tcl_Panic
 
 /*
  * WARNING: The contents of this file is automatically generated by the
